Use ng-bind rather than templates to avoid rendering errors
Use of {{angular templates}} causes problems on pages with Annotator
enabled due to Annotator's habit of splitting text nodes whenever you
select anything. Specifically -- if you select one of the words in this
text and then change the privacy setting, it will end up rendering as
something like

   PubliOnly Me
   Only Melic

or similar. Using a span tag and ng-bind is a bit of a hack but it
prevents this from happening.

Oh, Angular...

--- a/h/templates/client/privacy.html
+++ b/h/templates/client/privacy.html
@@ -5,7 +5,7 @@
         data-toggle="dropdown">
         <i class="small" ng-class="{'h-icon-public': isPublic(level.name),
                                     'h-icon-lock': !isPublic(level.name)}"></i>
-        {{level.text}}
+        <span ng-bind="level.text"></span>
         <i class="h-icon-arrow-drop-down"></i>
   </span>
   <ul class="dropdown-menu" role="menu">
@@ -13,7 +13,7 @@
       <a href="">
         <i class="small" ng-class="{'h-icon-public': isPublic(level.name),
                                     'h-icon-lock': !isPublic(level.name)}"></i>
-        {{level.text}}
+        <span ng-bind="level.text"></span>
       </a>
     </li>
   </ul>
