--- a/h/static/styles/threads.scss
+++ b/h/static/styles/threads.scss
@@ -1,5 +1,4 @@
 $thread-padding: 1em;
-$threadexp-width: 1em;
 
 .stream-list {
   & > * {
@@ -16,45 +15,11 @@ $threadexp-width: 1em;
   }
 }
 
-.annotation-collapsed-replies {
-  display: none;
-}
-
-.thread-replies {
-  .thread:first-child {
-    margin-top: 0.5em;
-  }
-
-  .reply-count {
-    display: none;
-  }
-
-  .thread-message {
-    &.collapsed {
-      margin-bottom: -2.5em;
-    }
-  }
-
-  .annotation {
-    &.collapsed {
-      .annotation-body, .tags, .annotation-actions {
-        display: none;
-      }
-
-      .annotation-collapsed-replies {
-        display: inline;
-
-        .reply-count {
-          display: inline;
-          margin-left: .4em;
-        }
-      }
-    }
-  }
+.thread-replies .thread:first-child {
+  margin-top: 0.5em;
 }
 
 .thread {
-  @include pie-clearfix;
   cursor: pointer;
   position: relative;
 
@@ -82,27 +47,18 @@ $threadexp-width: 1em;
   }
 
   .threadexp {
-    background: $white;
-    color: $gray-light;
     position: absolute;
+    left: -.7em;
     width: 1.4em;
     height: 1.4em;
-    top: 0;
-    left: -.7em;
-    font-size: 1.4em;
+    font-size: 1.1em;
 
     span {
-      position: absolute;
-      left: (1.4 - $threadexp-width) / 2;
-      width: $threadexp-width;
-      height: $threadexp-width;
-
-      &:before {
-        font-size: $threadexp-width;
-        position: absolute;
-        top: 0;
-        left: 0;
-      }
+      background: $white;
+      color: $gray-light;
+      display: block;
+      line-height: inherit;
+      text-align: center;
     }
   }
 }
