--- a/h/templates/client/annotation.html
+++ b/h/templates/client/annotation.html
@@ -43,7 +43,7 @@
   </span>
 
   <!-- Timestamp -->
-  <a class="annotation-timestamp small pull-right"
+  <a class="annotation-timestamp"
      target="_blank"
      title="{{vm.annotation.updated | moment:'LLLL'}}"
      ng-if="!vm.editing && vm.annotation.updated"
