Revert "Revert "Merge pull request #2337 from hypothesis/thread-collapsing""
This reverts commit 561544e4d289e728035aa9b549758b3b55d281f0.

--- a/h/static/styles/threads.scss
+++ b/h/static/styles/threads.scss
@@ -1,5 +1,4 @@
 $thread-padding: 1em;
-$threadexp-width: 1em;
 
 .stream-list {
   & > * {
@@ -16,14 +15,11 @@ $threadexp-width: 1em;
   }
 }
 
-.thread-replies {
-  .thread:first-child {
-    margin-top: 0.5em;
-  }
+.thread-replies .thread:first-child {
+  margin-top: 0.5em;
 }
 
 .thread {
-  @include pie-clearfix;
   cursor: pointer;
   position: relative;
 
@@ -51,27 +47,18 @@ $threadexp-width: 1em;
   }
 
   .threadexp {
-    background: $white;
-    color: $gray-light;
     position: absolute;
+    left: -.7em;
     width: 1.4em;
     height: 1.4em;
-    top: 0;
-    left: -.7em;
+    font-size: 1.1em;
 
     span {
-      position: absolute;
-      top: (1.4 - $threadexp-width) / 2;
-      left: (1.4 - $threadexp-width) / 2;
-      width: $threadexp-width;
-      height: $threadexp-width;
-
-      &:before {
-        font-size: $threadexp-width;
-        position: absolute;
-        top: 0;
-        left: 0;
-      }
+      background: $white;
+      color: $gray-light;
+      display: block;
+      line-height: inherit;
+      text-align: center;
     }
   }
 }
