--- a/h/templates/client/annotation.html
+++ b/h/templates/client/annotation.html
@@ -35,8 +35,15 @@
     <!-- / Editing controls -->
   </span>
 
+  <span class="annotation-collapsed-replies">
+    <a class="reply-count small" href=""
+       ng-click="replyCountClick()"
+       ng-pluralize count="replyCount"
+       when="{'0': '', 'one': '1 reply', 'other': '{} replies'}"></a>
+  </span>
+
   <!-- Timestamp -->
-  <a class="annotation-timestamp small pull-right"
+  <a class="annotation-timestamp"
      target="_blank"
      title="{{vm.annotation.updated | moment:'LLLL'}}"
      ng-if="!vm.editing && vm.annotation.updated"
