Clean up use of footer and body sections
Make the tags section use .annotation-body (because tags are a form of
body) and put the form actions, reply count, and license messages into
the footer so that these collpasing properly and uniformly.

--- a/h/static/styles/annotations.scss
+++ b/h/static/styles/annotations.scss
@@ -178,7 +178,7 @@ privacy {
       margin: 0;
     }
 
-    .annotation-body, .tags, .annotation-actions, .annotation-footer {
+    .annotation-body, .annotation-footer {
       display: none;
     }
 
