Show a sign in message in unsaved annotations
Since there is no username, collapsing a draft when not signed in
had been causing the annotation to disappear completely. Now, there
is a clear prompt that holds the space.

--- a/h/templates/client/annotation.html
+++ b/h/templates/client/annotation.html
@@ -35,6 +35,8 @@
     <!-- / Editing controls -->
   </span>
 
+  <span ng-if="!vm.annotation.user">Sign in to save this annotation.</span>
+
   <span class="annotation-collapsed-replies">
     <a class="reply-count small" href=""
        ng-click="replyCountClick()"
