Use new feature client for dynamic feature toggling
Our first attempt at integrating feature flags with the frontend
required a rebuild and redeploy of the extension, which somewhat
defeats the purpose of feature flags. This commit wires up the new
feature client introduced in the preceding commits, allowing feature
toggles to update behaviour of already-deployed clients.

--- a/h/templates/client/settings/notifications.html
+++ b/h/templates/client/settings/notifications.html
@@ -1,4 +1,4 @@
-<div class="tab-pane" title="Notifications">
+<div ng-if="feature('notification')" class="tab-pane" title="Notifications">
   <form class="account-form form" name="notificationsForm">
     <p class="form-description">Receive notification emails when:</p>
     <div class="form-field form-checkbox-list">
