--- a/h/templates/client/annotation.html
+++ b/h/templates/client/annotation.html
@@ -112,9 +112,9 @@
 <footer class="annotation-footer">
   <div class="small" ng-if="vm.editing">
     <p ng-show="vm.privacyLevel.text == 'Only Me'">
-      <i class="h-icon-lock"></i> This annotation is viewable only to you.</p>
+      <i class="h-icon-lock"></i> This annotation is visible only to you.</p>
     <p ng-show="vm.privacyLevel.text == 'Public'">
-      <i class="h-icon-public"></i> This annotation is viewable to everyone.</p>
+      <i class="h-icon-public"></i> This annotation is visible to everyone.</p>
   </div>
 
   <div class="form-actions" ng-if="vm.editing" ng-switch="vm.action">
