Small fixes for annotation card styles
- Collapsed threads don't show tags
- Collapsed threads should have space between user and reply count
- "Sign in required" card should have symmetric vertical margins

--- a/h/static/styles/threads.scss
+++ b/h/static/styles/threads.scss
@@ -63,12 +63,9 @@ $thread-padding: 1em;
   }
 }
 
-.thread-message {
-  margin-bottom: .5em;
-}
-
+.thread-message,
 .thread-deleted {
-  margin: .8em 0;
+  margin: .5em 0;
 }
 
 .thread-load-more {
