--- a/h/templates/client/annotation.html
+++ b/h/templates/client/annotation.html
@@ -103,7 +103,7 @@
     </tags-input>
   </div>
 
-  <div class="annotation-section tags tags-read-only"
+  <div class="annotation-body tags tags-read-only"
        ng-if="vm.annotation.tags.length && !vm.editing">
     <ul class="tag-list">
       <li class="tag-item" ng-repeat="tag in vm.annotation.tags">
