Misc styling improvements
+ Adjust vertical alignment of save an cancel icons.
+ Add extra space at the top of the "Sign in to create annotations" message.
+ Adjust font-sizes to be more visually appealing.

--- a/h/static/styles/common.scss
+++ b/h/static/styles/common.scss
@@ -188,7 +188,7 @@ html {
     a {
       display: block;
       line-height: 1;
-      padding: 1em;
+      padding: .8em;
       white-space: nowrap;
     }
 
