--- a/h/static/styles/forms.scss
+++ b/h/static/styles/forms.scss
@@ -263,7 +263,7 @@
 // Positions the icon nicely within the button.
 .btn-icon {
   font-size: 1.4em;
-  vertical-align: top;
+  vertical-align: sub;
 }
 
 // Absolutely positions a message/icon to the left of a button.
