--- a/h/templates/client/annotation.html
+++ b/h/templates/client/annotation.html
@@ -1,4 +1,4 @@
-<header class="annotation-header" ng-if="!vm.annotation.user">
+<header class="annotation-header" ng-if="!vm.annotation.user" style="margin-top:.75em">
   <strong>You must be signed in to create annotations.</strong>
 </header>
 
