--- a/h/templates/client/annotation.html
+++ b/h/templates/client/annotation.html
@@ -15,7 +15,7 @@
          >{{vm.annotation.user | persona}}</a>
       <i class="h-icon-border-color" ng-show="vm.isHighlight() && !vm.editing" title="This is a highlight. Click 'edit' to add a note or tag."></i>
       <span ng-show="vm.isPrivate() && !vm.editing"
-            title="This annotation is viewable only to you.">
+            title="This annotation is visible only to you.">
         <i class="h-icon-lock"></i> Private
       </span>
       <span class="annotation-citation"
