s/viewable by/visible to/

--- a/h/templates/help.html
+++ b/h/templates/help.html
@@ -82,7 +82,7 @@
       </section>
       <section class="help-page-section">
         <h2 id="key-features" class="help-page-heading">Privacy</h2>
-        <p class="help-page-lede">Annotations are either public and viewable by everyone
+        <p class="help-page-lede">Annotations are either public and visible to everyone
           or private and visible only to you.</p>
         <div class="grid feature-content">
           <section class="feature column-desktop-1-2">
