--- a/h/templates/nipsa.html
+++ b/h/templates/nipsa.html
@@ -15,10 +15,10 @@
     <input type="submit" value="Add"></input>
 
     <ul>
-      {% for user_id in user_ids %}
+      {% for userid in userids %}
         <li>
-          {{ user_id }}
-          <button type="submit" name="remove" value="{{ user_id }}"
+          {{ userid }}
+          <button type="submit" name="remove" value="{{ userid }}"
                   formaction="{{ request.route_url('unnipsa') }}">
             remove
           </button>
