Replace pyramid_layout with basic template inheritance
This commit removes our use of `pyramid_layout` to assign assets for
particular rendered pages. Instead, we use the rather more
straightforward approach of rendering templates directly. These
templates can inherit from one another, and can render asset tags using
the integration between `webassets` and `jinja2`, configured in `h.app`.

This commit also renames all Jinja2 templates to have one extension,
".jinja2", as this simplifies the configuration of the Jinja2 renderer
considerably: we don't have to configure as many Jinja2 environments as
we have file extensions.

--- a/h/claim/templates/claim_account.html.jinja2
+++ b/h/claim/templates/claim_account.html.jinja2
@@ -1,10 +1,16 @@
-{% extends "h:templates/layouts/base.html" %}
+{% extends "h:templates/layouts/base.html.jinja2" %}
 
 {% block page_title %}Claim account{% endblock page_title %}
 
+{% block styles %}
+  {% assets "app_css" %}
+    <link rel="stylesheet" href="{{ ASSET_URL }}">
+  {% endassets %}
+{% endblock %}
+
 {% block content %}
   <div id="claim" class="content paper">
-    {% include "h:templates/includes/header.html" %}
+    {% include "h:templates/includes/header.html.jinja2" %}
     <div class="form-vertical">
       <form class="form" action="{{ form.action }}" method="{{ form.method }}">
         {{ form['csrf_token'].render() | safe }}
