Rename nipsa -> add_nipsa, unnipsa -> remove_nipsa everywhere

--- a/h/templates/nipsa.html
+++ b/h/templates/nipsa.html
@@ -19,7 +19,7 @@
         <li>
           {{ userid }}
           <button type="submit" name="remove" value="{{ userid }}"
-                  formaction="{{ request.route_url('unnipsa') }}">
+                  formaction="{{ request.route_url('remove_nipsa') }}">
             remove
           </button>
         </li>
