Use ng-csp consistently for the AppController
There's no clear reason why we should enable ng-csp (which turns off
Angular's use of inline styles and JavaScript eval so as not to violate
Content-Security-Policy rules) only for the extension.

This commit removes the difference between the stream page and the
extension, so both have ng-csp enabled.

--- a/h/templates/app.html.jinja2
+++ b/h/templates/app.html.jinja2
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block body_tag %}
-<body ng-app="h" ng-controller="AppController">
+<body ng-app="h" ng-controller="AppController" ng-csp="">
 {% endblock %}
 
 {% block content %}
