--- a/h/static/styles/forms.scss
+++ b/h/static/styles/forms.scss
@@ -6,21 +6,20 @@
 .form-field {
   @include pie-clearfix;
   clear: both;
-  margin-bottom: 10px;
+  margin-bottom: .75em;
 }
 
 .form-heading {
   position: relative;
-  font-size: 1em;
   text-transform: uppercase;
   font-weight: bold;
   margin-top: 0;
-  margin-bottom: 20px;
+  margin-bottom: 1.5em;
 
   span {
     position: relative;
     background: white;
-    padding-right: 5px;
+    padding-right: .4em;
     z-index: 1;
   }
 
@@ -51,13 +50,12 @@
 .form-label {
   cursor: pointer;
   font-weight: bold;
-  font-size: 13px;
-  margin-bottom: 5px;
+  margin-bottom: .4em;
 }
 
 .form-hint {
-  font-size: 12px;
-  margin-left: 5px;
+  font-size: .833em;
+  margin-left: .25em;
   color: $gray-light;
   -webkit-font-smoothing: antialiased;
 }
@@ -103,13 +101,13 @@
   position: relative;
   display: none;
   background: $error-color;
-  margin-top: (10 / 13 * 1em);
-  padding: (4 / 13 * 1em) (11 / 13 * 1em);
+  margin-top: .75em;
+  padding: .25em .75em;
   float: left;
   border-radius: 2px;
 
   .form-error {
-    font-size: 12px;
+    font-size: .833em;
     color: white;
   }
 
@@ -130,18 +128,17 @@
 }
 
 .form-error {
-  font-size: 13px;
   line-height: 1.5;
   color: $error-color;
 }
 
 .form-checkbox-item {
-  padding-left: 22px;
+  padding-left: 1.5em;
 
   .form-checkbox, [type=checkbox], [type=radio] {
     float: left;
-    margin-left: -20px;
-    margin-top: 0.3em;
+    margin-left: -1.5em;
+    margin-top: .25em;
   }
 
   .form-label {
@@ -158,20 +155,20 @@
   }
 
   .btn {
-    margin-left: 0.5em;
+    margin-left: .5em;
   }
 }
 
 .form-actions {
   @include pie-clearfix;
-  margin-top: 10px;
+  margin-top: .75em;
 }
 
 .form-actions-message {
-  font-size: .9231em;
+  font-size: .833em;
   line-height: 1.5;
   float: left;
-  margin-top: 7px;
+  margin-top: 1em;
 }
 
 .form-actions-buttons {
@@ -179,7 +176,7 @@
   float: right;
 
   > * {
-    margin-left: 10px;
+    margin-left: .75em;
     &:first-child {
       margin-left: 0;
     }
@@ -220,17 +217,17 @@
   @include background(linear-gradient(top, $error-color, shade($error-color, 5%)));
   color: white;
   border-color: shade($error-color, 15%);
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.1);
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, .1);
 
   &:focus, &:hover, &:active, &.js-hover, &.js-focus, &.js-active {
-    @include box-shadow(0 1px 0 rgba(0, 0, 0, 0.05));
+    @include box-shadow(0 1px 0 rgba(0, 0, 0, .05));
     color: white;
     background: tint($error-color, 5%);
     border-color: $error-color;
   }
 
   &:active, &.js-active {
-    @include box-shadow(inset 0 1px 0 rgba(0, 0, 0, 0.3));
+    @include box-shadow(inset 0 1px 0 rgba(0, 0, 0, .3));
     color: white;
     background: shade($error-color, 10%);
     border-color: shade($error-color, 30%);
@@ -304,7 +301,7 @@
 }
 
 [status-button-state] .btn-message-text {
-  @include transition(opacity 0.2s 0.6s ease-in);
+  @include transition(opacity .2s .6s ease-in);
   opacity: 0;
 }
 
@@ -317,20 +314,20 @@
 }
 
 [status-button-state=success] .btn-message-success .btn-message-icon {
-  @include transition(transform 0.15s 0 cubic-bezier(0, 1.8, 1, 1.8));
+  @include transition(transform .15s 0 cubic-bezier(0, 1.8, 1, 1.8));
   @include transform(scale(1));
 }
 
 // TODO: Move into seperate module stylesheet.
 .account-form {
-  margin-top: 30 / 13 * 1em;
-  margin-bottom: 30 / 13 * 1em;
+  margin-top: 2.25em;
+  margin-bottom: 2.25em;
 
   &:first-child {
-    margin-top: 15 / 13 * 1em;
+    margin-top: 1.2em;
   }
 
   &:last-child {
-    margin-bottom: 15 / 13 * 1em;
+    margin-bottom: 1.2em;
   }
 }
