--- a/h/groups/templates/create_group.html.jinja2
+++ b/h/groups/templates/create_group.html.jinja2
@@ -12,7 +12,7 @@
   <div class="content paper">
     {% include "h:templates/includes/header.html.jinja2" %}
     <div class="form-vertical">
-      <form class="form" action="{{ form.action }}" method="{{ form.method }}">
+      <form class="form" action="{{ form.action }}" method="{{ form.method }}" novalidate>
         {{ form['csrf_token'].render() | safe }}
         <div class="form-field{% if form['name'].error %} form-field-error{% endif %}">
           <label class="form-label" for="field-group-name">
@@ -20,7 +20,7 @@
             <span class="form-hint">(a human-readable name for your group)</span>
           </label>
           <input class="form-input" id="field-group-name"
-                 type="text" name="name" value="" required />
+                 type="text" name="name" value="{{ data.name }}" required />
           {% if form['name'].error %}
             <ul class="form-error-list">
               {% for err in form['name'].error.asdict().values() %}
