Implement "Share a group" functionality
Group pages show a "Login to join group" link (opens in a new tab) if
you're not logged in.
If you're logged in they show a "Click to join group" button, posts to
new join() callable that adds the user to the group.
If you're already a member they show a "Share this link to invite people" link.

The groups dropdown list has new share icon links to the group's page,
for each group.

--- a/h/groups/templates/join.html.jinja2
+++ b/h/groups/templates/join.html.jinja2
@@ -10,15 +10,12 @@
 
 {% block content %}
   <div class="content paper">
-    {% for message in request.session.pop_flash('success') %}
-      {{ message }}
-    {% endfor %}
-
     {% include "h:templates/includes/header.html.jinja2" %}
-
     This is group {{ group.name }}.
-    You're a member of this group.
-    You can invite other people to join this group by sending them the link
-    to this page: {{ group_url }}
+    <form method="POST">
+      <button type="submit">
+        Join this group
+      </button>
+    </form>
   </div>
 {% endblock content %}
