--- a/h/groups/templates/login_to_join.html.jinja2
+++ b/h/groups/templates/login_to_join.html.jinja2
@@ -10,15 +10,10 @@
 
 {% block content %}
   <div class="content paper">
-    {% for message in request.session.pop_flash('success') %}
-      {{ message }}
-    {% endfor %}
-
     {% include "h:templates/includes/header.html.jinja2" %}
-
     This is group {{ group.name }}.
-    You're a member of this group.
-    You can invite other people to join this group by sending them the link
-    to this page: {{ group_url }}
+    <a href="{{ request.route_url('login') }}" target="_blank">
+      Login to join this group.
+    </a>
   </div>
 {% endblock content %}
