--- a/h/templates/client/group_list.html
+++ b/h/templates/client/group_list.html
@@ -4,9 +4,13 @@
 </span>
 <ul class="dropdown-menu pull-right" role="menu">
   <li ng-repeat="group in groups">
-    <a ng-href="{{group.url}}" ng-bind="group.name" target="_blank"></a>
+    <a ng-href="{{group.url}}" ng-bind="group.name" target="_blank"
+       class="group-name pull-left"></a>
+    <a ng-href="{{group.url}}" target="_blank" class="h-icon-link pull-right"
+       title="Share this group"></a>
+    <div style="clear:both;"></div>
   </li>
   <li>
-    <a href="/groups/new" target="_blank"><i class="h-icon-add"></i> Create a group</a>
+    <a href="/groups/new" target="_blank"><i class="h-icon-add"></i> New Group</a>
   </li>
 </ul>
