Begin implementing "Share a group" functionality
The code for this is not very nice yet, but the read_group() view now
renders:

- A page with a "Login to join this group" link (redirects back to group's
  page after successful login) if the user isn't logged in

- A page with a "Join this group" link the the new group_join route (the
  route doesn't work yet, group joining isn't implemented yet) if the user
  isn't a member of the group

- A page with a "Share this link to invite people" if the user is a
  member of the group

--- a/h/groups/templates/join_group.html.jinja2
+++ b/h/groups/templates/join_group.html.jinja2
@@ -12,8 +12,7 @@
   <div class="content paper">
     {% include "h:templates/includes/header.html.jinja2" %}
     This is group {{ group.name }}.
-    You're a member of this group.
-    You can invite other people to join this group by sending them the link
-    to this page: {{ group_url }}
+    Click to
+    <a href="{{ join_url }}">join this group</a>.
   </div>
 {% endblock content %}
