--- a/h/groups/templates/login_to_join_group.html.jinja2
+++ b/h/groups/templates/login_to_join_group.html.jinja2
@@ -12,8 +12,9 @@
   <div class="content paper">
     {% include "h:templates/includes/header.html.jinja2" %}
     This is group {{ group.name }}.
-    You're a member of this group.
-    You can invite other people to join this group by sending them the link
-    to this page: {{ group_url }}
+    <a href="{{ request.route_url('synchronous_login') }}?redirect={{ redirect }}">
+      Login to join this group.
+    </a>
   </div>
 {% endblock content %}
+
