--- a/h/templates/client/thread.html
+++ b/h/templates/client/thread.html
@@ -45,3 +45,7 @@
       ng-show="vm.shouldShowAsReply()">
   </li>
 </ul>
+
+<footer class="thread-anchor-notice" ng-if="!vm.container.message.$anchored">
+  <em>We can't find the exact position of this annotation.</em>
+</footer>
