--- a/h/templates/layouts/admin.html.jinja2
+++ b/h/templates/layouts/admin.html.jinja2
@@ -2,6 +2,7 @@
     ('index', 'Home', request.route_url('admin_index')),
     ('nipsa', 'NIPSA', request.route_url('admin_nipsa')),
     ('admins', 'Administrators', request.route_url('admin_admins')),
+    ('staff', 'Staff', request.route_url('admin_staff')),
 ] -%}
 
 {%- set page_id = page_id|default('home') -%}
