Add ng-strict-di option to ng-app directives
This isn't a feature in Angular 1.2, but when we upgrade to Angular 1.3,
this will spew warnings for objects that rely on implicit injection
behaviour (i.e. that are missing injection annotations) -- such objects
are not suitable for minification.

--- a/h/templates/auth.html.jinja2
+++ b/h/templates/auth.html.jinja2
@@ -7,7 +7,8 @@
 {% endblock %}
 
 {% block body_tag %}
-<body ng-app="h" ng-controller="AuthAppController">
+{# ng-strict-di is a (harmless) noop until we upgrade to Angular 1.3 #}
+<body ng-app="h" ng-strict-di ng-controller="AuthAppController">
 {% endblock %}
 
 {% block content %}
