--- a/h/templates/app.html.jinja2
+++ b/h/templates/app.html.jinja2
@@ -7,7 +7,8 @@
 {% endblock %}
 
 {% block body_tag %}
-<body ng-app="h" ng-controller="AppController" ng-csp="">
+{# ng-strict-di is a (harmless) noop until we upgrade to Angular 1.3 #}
+<body ng-app="h" ng-strict-di ng-controller="AppController" ng-csp="">
 {% endblock %}
 
 {% block content %}
