--- a/h/templates/auth.html.jinja2
+++ b/h/templates/auth.html.jinja2
@@ -25,7 +25,7 @@
 {% endblock %}
 
 {% block scripts %}
-  {% assets "app_vendor_js", "app_js", "account_js" %}
+  {% assets "app_js", "account_js" %}
     <script src="{{ ASSET_URL }}"></script>
   {% endassets %}
 {% endblock %}
