Enable publishing annotations to a group
Features
========

1. If you have a group selected in the groups dropdown when you create an
annotation, the annotation will be created in that group.

2. Only users who are members of the group can see the group's annotations.

3. An annotation can be separately set to public or private, whether it is in a
group or not, using the separate visibility dropdown on the annotation card
when creating or editing an annotation.

   Private means viewable to the user only, public means viewable to the group
or to everyone if the annotation has no group. When in a group the group's name
appears instead of "Public" in the user interface (and with a group icon
instead of the public icon). So for example if I make an annotation in group
Foobar I can set its visibility to Only Me or to Foobar.

4. New icons and styles for all the group-related parts of the UI, should look
the same as in Jake's mockups now.

Implementation Notes
====================

Structure
---------

- Move most of the groups Python code into `h.api.groups`.
  It has to be in the API, because `h.api.views` and `h.api.search` need to
  access it.
  Only the code for the groups HTML page is left in `h.groups`.
  Put as much of the groups code as possible in `h.groups.api`, have only a few
  integration points with other parts of the code, try to keep those to simple
  one-liners that call groups package functions.

Auth
----

- We add `"group:<hashid>"` principals to effective_principals for each group
  the user is a member of.

- The existing `"group:admin"` and `"group:staff"` principals are renamed to
  `"group:__admin__"` and `"group:__staff__"` so that they never clash with
  hashids (hashids never contain _'s).

- `h.api.groups.auth`: A request is authorized to read from or write to a group
  if the request has a `"group:<hashid>"` principal matching the group's
  hashid.

  `authorized_to_write_group()` is used for creating, updating and
  deleting annotations in

--- a/h/static/styles/app.scss
+++ b/h/static/styles/app.scss
@@ -93,7 +93,7 @@ $group-list-width: 225px;
 }
 
 .group-list .dropdown-menu .group-name {
-  max-width: $group-list-width - 45px;
+  width: $group-list-width - 45px;
   overflow: hidden;
   text-overflow: ellipsis;
 }
