--- a/h/templates/client/group_list.html
+++ b/h/templates/client/group_list.html
@@ -1,16 +1,30 @@
-<span role="button" class="dropdown-toggle" data-toggle="dropdown">
-  Groups
-  <i class="h-icon-arrow-drop-down"></i>
-</span>
-<ul class="dropdown-menu pull-right" role="menu">
-  <li ng-repeat="group in groups">
-    <a ng-href="{{group.url}}" ng-bind="group.name" target="_blank"
-       class="group-name pull-left"></a>
-    <a ng-href="{{group.url}}" target="_blank" class="h-icon-link pull-right"
-       title="Share this group"></a>
-    <div style="clear:both;"></div>
-  </li>
-  <li>
-    <a href="/groups/new" target="_blank"><i class="h-icon-add"></i> New Group</a>
-  </li>
-</ul>
+<div ng-controller="GroupListCtrl as ctrl"
+     class="pull-right dropdown group-list">
+  <span role="button" class="dropdown-toggle" data-toggle="dropdown">
+    <i ng-if="ctrl.focusedGroup().hashid == '__public__'"
+       class="h-icon-public"></i>
+    <i ng-if="ctrl.focusedGroup().hashid != '__public__'"
+       class="h-icon-group"></i>
+    {{ctrl.focusedGroup().name}}
+    <i class="h-icon-arrow-drop-down"></i>
+  </span>
+  <ul class="dropdown-menu pull-right" role="menu">
+    <li ng-repeat="group in ctrl.groups()"
+        ng-class="group.hashid == ctrl.focusedGroup().hashid? 'selected' : ''">
+      <div class="pull-left group-name">
+        <a ng-click="ctrl.focusGroup(group.hashid)">
+          <i ng-if="group.hashid == '__public__'" class="h-icon-public"></i>
+          <i ng-if="group.hashid != '__public__'" class="h-icon-group"></i>
+          {{group.name}}
+        </a>
+      </div>
+      <a ng-href="{{group.url}}" target="_blank" class="h-icon-link pull-right"
+         title="Share this group"></a>
+      <div style="clear:both;"></div>
+    </li>
+    <li>
+      <a href="/groups/new" target="_blank"><i class="h-icon-add"></i>
+      New Group</a>
+    </li>
+  </ul>
+</div>
