--- a/h/templates/client/privacy.html
+++ b/h/templates/client/privacy.html
@@ -3,16 +3,20 @@
         role="button"
         class="dropdown-toggle"
         data-toggle="dropdown">
-        <i class="small" ng-class="{'h-icon-public': isPublic(level.name),
-                                    'h-icon-lock': !isPublic(level.name)}"></i>
+        <i class="small"
+           ng-class="{'h-icon-public': isPublic(level.name) && !level.isGroup,
+                      'h-icon-group': isPublic(level.name) && level.isGroup,
+                      'h-icon-lock': !isPublic(level.name)}"></i>
         <span ng-bind="level.text"></span>
         <i class="h-icon-arrow-drop-down"></i>
   </span>
   <ul class="dropdown-menu" role="menu">
     <li ng-repeat="level in levels" ng-click="setLevel(level)">
       <a href="">
-        <i class="small" ng-class="{'h-icon-public': isPublic(level.name),
-                                    'h-icon-lock': !isPublic(level.name)}"></i>
+        <i class="small"
+           ng-class="{'h-icon-public': isPublic(level.name) && !level.isGroup,
+                      'h-icon-group': isPublic(level.name) && level.isGroup,
+                      'h-icon-lock': !isPublic(level.name)}"></i>
         <span ng-bind="level.text"></span>
       </a>
     </li>
