--- a/h/templates/layouts/admin.html.jinja2
+++ b/h/templates/layouts/admin.html.jinja2
@@ -1,5 +1,6 @@
 {%- set nav_pages = [
     ('index', 'Home', request.route_url('admin_index')),
+    ('features', 'Feature flags', request.route_url('admin_features')),
     ('nipsa', 'NIPSA', request.route_url('admin_nipsa')),
     ('admins', 'Administrators', request.route_url('admin_admins')),
     ('staff', 'Staff', request.route_url('admin_staff')),
