Give the bucket indicators an explicit height
This makes the code easier to understand because it makes explicit
the relationship to the line height of the label.

--- a/h/static/styles/annotator/bucket-bar.scss
+++ b/h/static/styles/annotator/bucket-bar.scss
@@ -19,6 +19,7 @@
   position: absolute;
   margin-top: -8px;
   line-height: 1;
+  height: 16px;
   width: 26px;
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
   text-align: center;
