Rewrite infinite scroll against the window
Rather than having a fixed body that scrolls, let the body take a
natural height and rewrite the infinite scroll handler to watch the
global scroll.

The infinite scroll directive is now smarter and has tests.

--- a/h/templates/app.html.jinja2
+++ b/h/templates/app.html.jinja2
@@ -60,7 +60,7 @@
   <!-- / Toolbar -->
 
   <!-- Wrapper -->
-  <div id="wrapper" whenscrolled="loadMore(10)">
+  <div id="wrapper">
     <!-- Account Dialog -->
     <div class="content ng-cloak" ng-if="accountDialog.visible">
       <div id="dialog" class="sheet">
