--- a/h/templates/client/viewer.html
+++ b/h/templates/client/viewer.html
@@ -1,7 +1,8 @@
 <!-- Thread view -->
 <ul class="stream-list"
     deep-count="count"
-    thread-filter="search.query">
+    thread-filter="search.query"
+    window-scroll="loadMore(10)">
   <li ng-show="threadFilter.active()"
       ><span ng-pluralize
              count="count('match')"
