--- a/h/templates/client/annotation.html
+++ b/h/templates/client/annotation.html
@@ -16,7 +16,7 @@
       <i class="h-icon-border-color" ng-show="vm.isHighlight() && !vm.editing" title="This is a highlight. Click 'edit' to add a note or tag."></i>
       <span ng-show="vm.isPrivate() && !vm.editing"
             title="This annotation is visible only to you.">
-        <i class="h-icon-lock"></i> Private
+        <i class="h-icon-lock"></i> Only Me
       </span>
       <span class="annotation-citation"
             ng-if="!vm.embedded"
