--- a/h/templates/pattern_library.html.jinja2
+++ b/h/templates/pattern_library.html.jinja2
@@ -4,7 +4,7 @@
 
 {% block styles %}
   {% assets "app_css", "inject_css" %}
-    <link rel="stylesheet" href="{{ ASSETS_URL }}">
+    <link rel="stylesheet" href="{{ ASSET_URL }}">
   {% endassets %}
   <style>
     body {
