--- a/h/static/styles/forms.scss
+++ b/h/static/styles/forms.scss
@@ -263,7 +263,7 @@
   vertical-align: middle;
 }
 
-// Absolutely positions a message/icon to the left of a button.
+// Positions a message/icon to the left of a button.
 .btn-with-message {
   position: relative;
 }
